# fliegerarzt-kartei

./: CNAME  Makefile  index.html  pyproject.toml
flieger_arzt_kartei/: doctor.py  main.py  parser.py  writer.py
flieger_arzt_kartei/templates/: index.html
