[tool.poetry]
name = "flieger-arzt-kartei"
version = "0.1.0"
description = ""
authors = ["Rico Lang <rico.lang15@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
bs4 = "^0.0.2"
jinja2 = "^3.1.4"


[tool.poetry.group.dev.dependencies]
pyright = "^1.1.363"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
